# sega_learn

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  compare_nn.ipynb  compare_nn_utils.ipynb  environment.yml  environment_pypy.yml  pydoc-markdown.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: core-tests.yml  examples-tests.yml  lint-format.yml  publish-to-pypi.yml  run-tests.yml  verify-pip-install.yml
docs/: all_figures.html  documentation.md  sega_learn.auto.__init__.html  sega_learn.auto.classifier.html  sega_learn.auto.html  sega_learn.auto.regressor.html  sega_learn.clustering.__init__.html  sega_learn.clustering._dbscan_jit_utils.html  sega_learn.clustering.clustering.html  sega_learn.clustering.html  sega_learn.html  sega_learn.linear_models.__init__.html  sega_learn.linear_models._lasso_jit_utils.html  sega_learn.linear_models._ridge_jit_utils.html  sega_learn.linear_models.classifiers.html  sega_learn.linear_models.discriminantAnalysis.html  sega_learn.linear_models.html  sega_learn.linear_models.linearModels.html  sega_learn.linear_models.regressors.html  sega_learn.nearest_neighbors.__init__.html  sega_learn.nearest_neighbors._nearest_neighbors_jit_utils.html  sega_learn.nearest_neighbors.base.html  sega_learn.nearest_neighbors.html  sega_learn.nearest_neighbors.knn_classifier.html  sega_learn.nearest_neighbors.knn_regressor.html  sega_learn.neural_networks.__init__.html  sega_learn.neural_networks.activations.html  sega_learn.neural_networks.animation.html  sega_learn.neural_networks.cupy_utils.html  sega_learn.neural_networks.html  sega_learn.neural_networks.layers.html  sega_learn.neural_networks.layers_cupy.html  sega_learn.neural_networks.layers_jit.html  sega_learn.neural_networks.loss.html  sega_learn.neural_networks.loss_cupy.html  sega_learn.neural_networks.loss_jit.html  sega_learn.neural_networks.neuralNetwork.html  sega_learn.neural_networks.neuralNetworkBase.html  sega_learn.neural_networks.neuralNetworkBaseBackend.html  sega_learn.neural_networks.neuralNetworkCuPyBackend.html  (+41 more)
examples/auto/: classifier.py  regressor.py
examples/clustering/: dbscan.py  dbscan_3d.py  dbscan_3d_aimated.py  kmeans.py
examples/linear_models/: bayes.py  lasso.py  lda.py  lda_comparison.py  lda_vs_qda_comparison.py  logisticRegression.py  ols.py  passiveAggressive.py  passiveAggressive_vis.py  perceptron.py  polynomialTransform.py  qda.py  ransac.py  ransac_vis.py  ridge.py
examples/nearest_neighbors/: nearestNeighborsClassifier.py  nearestNeighborsRegressor.py
examples/neural_networks/: _neuralNetwork_classifier.py  _neuralNetwork_classifier_cupy.py  _neuralNetwork_classifier_numba.py  neuralNetwork.py  neuralNetwork_cancer.py  neuralNetwork_classifier.py  neuralNetwork_classifier_hyper.py  neuralNetwork_diabetes.py  neuralNetwork_hyper.py  neuralNetwork_iris.py  neuralNetwork_layers.py  neuralNetwork_layers_conv.py  neuralNetwork_layers_conv_cifar.py  neuralNetwork_layers_conv_numba.py  neuralNetwork_layers_numba.py  neuralNetwork_layers_numba_new.py  neuralNetwork_metrics.py  neuralNetwork_metrics_anim.py  neuralNetwork_regressor.py
examples/neural_networks_dev/: neuralNetwork_cupy.py  neuralNetwork_layers_conv_numba.py  neuralNetwork_layers_numba_new.py
examples/pipelines/: pipeline_classification.py  pipeline_classification_tuning.py  pipeline_example.py  pipeline_forecasting.py  pipeline_regression.py
examples/svm/: generalizedSVC_binary.py  generalizedSVC_multi.py  generalizedSVR.py  linearSVC.py  linearSVC_binary.py  linearSVC_multi.py  linearSVR.py  linearSVR_poly.py  oneClassSVM.py
examples/time_series/: additiveDecomposition.py  arima.py  arima_arima.py  arima_sarima.py  arima_sarimax.py  decom_additiveDecomposition.py  decom_multiplicativeDecomposition.py  doubleExponentialSmoothing.py  forecastingPipeline.py  mvg_exponentialMovingAverage.py  mvg_exponentialMovingAverage_anim.py  mvg_simpleMovingAverage.py  mvg_simpleMovingAverage_anim.py  mvg_weightedMovingAverage.py  mvg_weightedMovingAverage_anim.py  sarima.py  sarimax.py  smth_doubleExponentialSmoothing.py  smth_simpleExponentialSmoothing.py  smth_tripleExponentialSmoothing.py  tripleExponentialSmoothing.py  weightedMovingAverage.py
examples/trees/: adaBoostClassifier.py  adaBoostRegressor.py  compare_randomForestClassifier.py  compare_randomForestRegressor.py  gradientBoostedClassifier.py  gradientBoostedRegressor.py  isolationForest_blob.py  treeClassifier.py  (+6 more)
scripts/: _run_all_scripts.ps1  comment_density.ps1  count_lines.ps1  documentation_html.ps1  documentation_md.ps1  export_env.ps1  file_contents.ps1  python_file_contents.ps1  todo_comments.ps1
sega_learn/: README.md  __init__.py  setup.py
tests/: _default_tests.py  _test_log.csv  _test_reults.py  run_all_examples.py  run_all_tests.py  run_quick_tests.py  run_selected_tests.py  test_auto.py  test_auto_examples.py  test_auto_imports.py  test_clustering.py  test_clustering_examples.py  test_clustering_imports.py  test_imports.py  test_linear_model.py  test_linear_model_examples.py  test_linear_model_imports.py  test_nearest_neighbors.py  test_nearest_neighbors_examples.py  test_nearest_neighbors_imports.py  test_neural_networks.py  test_neural_networks_animation.py  test_neural_networks_base.py  test_neural_networks_base_v_numba.py  test_neural_networks_examples.py  test_neural_networks_imports.py  test_neural_networks_layers.py  test_neural_networks_loss.py  test_neural_networks_lossJIT.py  test_neural_networks_numba.py  test_neural_networks_optimizers.py  test_neural_networks_optimizersJIT.py  test_neural_networks_vanilla.py  test_pipelines.py  test_pipelines_examples.py  test_pipelines_forecasting.py  test_pipelines_imports.py  test_svm_examples.py  test_svm_generalized.py  test_svm_imports.py  (+24 more)
tests_performance/: nn_timing_results_cupy.csv  nn_timing_results_cupy_train.csv  nn_timing_results_train.csv  test_clustering.py  test_dbscan_perf.py  test_linear_model.py  test_nn.py  test_nn_cupy.py  test_randomForestRegression.py  test_ridge_jit_time.py  test_utils.py  tree_speed_test.py
(+184 files in other folders)
